Initial backend implementation for Project Rakan: SAM template, Lambdas, OpenAPI, and docs

--- a/infra/template.yaml
+++ b/infra/template.yaml
@@ -101,7 +101,7 @@ Outputs:
     Description: ARN of command Lambda
     Value: !GetAtt RakanCommandFunction.Arn
 
-# --- IoT Rule Example (manual creation) ---
+# Example IoT Rule (manual creation):
 # AWS::IoT::TopicRule
 # Properties:
 #   RuleName: rakan-ingest-rule
